[gd_scene load_steps=5 format=3 uid="uid://due6sriency27"]

[ext_resource type="Texture2D" uid="uid://cbe6r6u3fbk7x" path="res://systems/dialogue/assets/dialogue_box.png" id="1_0jl8m"]
[ext_resource type="Theme" uid="uid://d0nh3med3w2sl" path="res://systems/main_theme.tres" id="1_fcbj2"]
[ext_resource type="Script" path="res://systems/dialogue/dialogue_display_system.gd" id="2_vbkl6"]
[ext_resource type="AudioStream" uid="uid://caxuberr1ab16" path="res://systems/dialogue/assets/menu_selection_click.wav" id="4_vhryy"]

[node name="DialogueDisplaySystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fcbj2")
script = ExtResource("2_vbkl6")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(400, 130)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -160.0
offset_right = -233.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_0jl8m")
expand_mode = 1
stretch_mode = 5

[node name="MessageLabel" type="RichTextLabel" parent="TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = 40.0
offset_right = -35.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "test, this is a test rich text label
this is a second line of text that is longer.
there is now a scrollbar i need to continue making this line of text larger so that i can find out if the text box will wrap the letters correctly"

[node name="OptionsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(235, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.62
anchor_right = 0.987
anchor_bottom = 1.0
offset_left = 0.200012
offset_top = 194.0
offset_right = 0.319946
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="OptionsContainer"]
custom_minimum_size = Vector2(235, 0)
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../Button2")
text = "This is a long text option button.  Try to
click me."
autowrap_mode = 3

[node name="Button2" type="Button" parent="OptionsContainer"]
custom_minimum_size = Vector2(235, 0)
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Button")
focus_neighbor_bottom = NodePath("../Button3")
text = "This is a long text option button.  Try to
click me."
autowrap_mode = 3

[node name="Button3" type="Button" parent="OptionsContainer"]
custom_minimum_size = Vector2(235, 0)
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Button2")
text = "This is a long text option button.  Try to
click me."
autowrap_mode = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vhryy")
